# finance-tracker

./: .env.example  .gitignore  LICENSE  README.md  demo-en.html  demo.html  pyproject.toml
launchd/: finance-tracker.daily.plist.template
migrations/: schema_v1.sql  schema_v2.sql
scripts/: add_notion_notes.py  fetch_emails.py  fix_notion_db.py  generate_monthly_report.py  ingest_emails.py  ingest_newest.py  init_db.py  init_notion_db.py  inspect_notion_template.py  migrate_to_two_db.py  renormalize_merchants.py  run_daily.py  run_daily.sh  setup_monthly_reports_db.py  show_transactions.py  sync_notion.py  update_notion_tags.py  wipe_all.py
src/finance_tracker/: classifier.py  db.py  email_client.py  fx.py  ingest.py  merchants.py  monthly_report.py  notion_sync.py  notion_writer.py  parser.py
tests/: test_db.py  test_merchants.py  test_parser.py
