[project]
name = "finance-tracker"
version = "0.1.0"
description = "Personal finance tracker — auto-import credit card transactions from email"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    "html2text>=2024.2.26",
    "notion-client>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
